# persona-forge

./: .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.sqlite-admin  README.md  database.db  docker-compose.prod.yml  docker-compose.prodd.yml  docker-compose.yml  example.env  nginx-main.conf  pyproject.toml  pytest.ini  verify_setup.py
.github/: pull_request_template.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: AuthDialog.tsx  UserStatus.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/layout/: Sidebar.tsx  SplitLayout.tsx
frontend/src/components/persona/: ExportDialog.tsx  InlineEditor.tsx  PersonaCard.tsx  PersonaPanel.tsx
frontend/src/components/pricing/: PricingPage.tsx
frontend/src/components/search/: ModeSelector.tsx  SearchInterface.tsx
frontend/src/components/ui/: LimitBanner.tsx  PehlooLogo.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: authStore.ts  chatStore.ts  index.ts  personaStore.ts
frontend/src/types/: auth.ts  chat.ts  index.ts  persona.ts
src/: auth.py  database.py  dependencies.py  email_service.py  generator.py  main.py  models.py  prompts.py  schemas.py
src/routers/: auth.py  chat.py  export.py  payments.py  personas.py
tests/: conftest.py
tests/integration/: test_api.py  test_context.py
